[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/offswitch.png" type="Texture" id=1]
[ext_resource path="res://components/Switch.gd" type="Script" id=2]
[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 24 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="Switch" type="StaticBody2D" groups=[
"inputs",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 32, 0, 48, 96, 48 )
width = 6.0
default_color = Color( 0, 0, 0, 1 )

[node name="OutputCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputCollider"]
position = Vector2( 64, 48 )
shape = SubResource( 2 )

[node name="LeftOutputPosition" type="Position2D" parent="."]
position = Vector2( 40, 48 )

[node name="RightOutputPosition" type="Position2D" parent="."]
position = Vector2( 96, 48 )

[node name="TurnOnArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnOnArea"]
position = Vector2( -40, 0 )
shape = SubResource( 3 )

[node name="TurnOffArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnOffArea"]
position = Vector2( 48, 0 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -8.0
margin_top = -64.0
margin_right = 13.0
margin_bottom = -26.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="OutputCollider" to="." method="_on_OutputCollider_input_event"]
[connection signal="input_event" from="TurnOnArea" to="." method="_on_TurnOnArea_input_event"]
[connection signal="input_event" from="TurnOffArea" to="." method="_on_TurnOffArea_input_event"]
